[workspace]
resolver = "2"

members = ["pudcli", "pudlib", "puds", "pudw"]

[workspace.dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-http = "3.10.0"
actix-rt = "2.10.0"
anyhow = "1.0.98"
awc = { version = "3.6.0", features = ["rustls-0_22-webpki-roots"] }
bincode = "=1.3.3"
bytes = "1.10.1"
clap = { version = "4.5.35", features = ["derive"] }
futures = "0.3.31"
getset = "0.1.5"
lazy_static = "1.5.0"
regex = "1.11.1"
rustversion = "1.0.20"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.44.2", features = ["sync"] }
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_info",
] }
typed-builder = "0.21.0"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
vergen-gix = { version = "1.0.6", features = ["build", "cargo", "rustc", "si"] }
