[workspace]
resolver = "2"

members = ["pudcli", "pudlib", "puds", "pudw"]

[workspace.dependencies]
actix = "0.13.5"
actix-codec = "0.5.2"
actix-http = "3.11.1"
actix-rt = "2.11.0"
anyhow = "1.0.99"
awc = "3.7.0"
bincode = "=1.3.3"
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
getset = "0.1.6"
lazy_static = "1.5.0"
regex = "1.11.2"
rustls = { version = "0.23.31" }
rustversion = "1.0.22"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["sync"] }
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
typed-builder = "0.21.2"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
vergen-gix = { version = "1.0.9", features = ["build", "cargo", "rustc", "si"] }
