[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/pudlib"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudcli"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.3.0"
actix-rt = "2.8.0"
anyhow = "1.0.69"
awc = { version = "3.1.0", default-features = false, features = [
    "compress-brotli",
    "rustls",
] }
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.1.7", features = ["derive"] }
futures = "0.3.26"
getset = "0.1.2"
pudlib = { path = "../pudlib" }
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
time = "0.3.17"
tokio = { version = "1.25.0", features = ["sync"] }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_info",
] }
typed-builder = "0.12.0"

[build-dependencies]
rustversion = "1.0.11"
