[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/pudlib"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudcli"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.74.1"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = ["pudlib/unstable"]

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.3.1"
actix-rt = "2.8.0"
anyhow = "1.0.71"
awc = { version = "3.1.1", default-features = false, features = [
    "compress-brotli",
    "rustls",
] }
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.5.1", features = ["derive"] }
futures = "0.3.28"
getset = "0.1.2"
pudlib = { path = "../pudlib" }
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.57"
time = "0.3.21"
tokio = { version = "1.28.0", features = ["sync"] }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_info",
] }
typed-builder = "0.18.0"

[build-dependencies]
rustversion = "1.0.12"
