[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/pudlib"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudlib"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = []

[dependencies]
actix = "0.13.3"
anyhow = "1.0.71"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
console = "0.15.5"
const_format = "0.2.30"
dirs2 = "3.0.1"
getset = "0.1.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.21", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
toml = "0.8.0"
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.17", features = ["time"] }
typed-builder = "0.18.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
vergen-pretty = { version = "0.3.3", features = ["color", "trace"] }

[build-dependencies]
anyhow = "1.0.71"
rustversion = "1.0.12"
vergen-gix = { version = "1.0.0-beta.2", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
anyhow = "1.0.71"
regex = "1.8.1"
