[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/pudlib"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudlib"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.74.1"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = []

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
bytes = "1.5.0"
clap = { version = "4.5.2", features = ["derive"] }
console = "0.15.8"
const_format = "0.2.32"
dirs2 = "3.0.1"
getset = "0.1.2"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = { workspace = true }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
time = { version = "0.3.34", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
toml = "0.8.11"
tracing = { version = "0.1.40", features = [
    "max_level_trace",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.18", features = ["time"] }
typed-builder = "0.18.1"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
vergen-pretty = { version = "0.3.3", features = ["color", "trace"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { version = "1.0.0-beta.2", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
