[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/pudlib"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudlib"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.81.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = []

[dependencies]
actix = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
console = "0.15.11"
const_format = "0.2.34"
dirs2 = "3.0.1"
getset = { workspace = true }
rand = "0.9.1"
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
toml = "0.8.20"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.19", features = ["time"] }
typed-builder = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { version = "1.0.1", features = ["color", "trace"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
regex = { workspace = true }
