[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/puds"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "puds"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = ["pudlib/unstable"]

[dependencies]
actix = "0.13.3"
actix-http = "3.3.1"
actix-web = { version = "4.3.1", default-features = false, features = [
    "compress-brotli",
    "macros",
    "rustls-0_21",
] }
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
bincode = "1.3.3"
bytestring = "1.3.0"
clap = { version = "4.2.7", features = ["derive"] }
getset = "0.1.2"
pudlib = { path = "../pudlib" }
ruarango = "0.1.2"
rustls = "0.21.10"
rustls-pemfile = "1.0.4"
serde = { version = "1.0.185", features = ["derive"] }
thiserror = "1.0.40"
time = { version = "0.3.21", features = ["serde", "serde-human-readable"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_info"] }
typed-builder = "0.18.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[build-dependencies]
anyhow = "1.0.71"
rustversion = "1.0.12"
vergen-gix = { version = "1.0.0-beta.2", features = [
    "build",
    "cargo",
    "rustc",
    "si",
] }

[dev-dependencies]
actix-rt = "2.8.0"
lazy_static = "1.4.0"
