[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/puds"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "puds"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.75.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = ["pudlib/unstable"]

[dependencies]
actix = { workspace = true }
actix-http = { workspace = true }
actix-web = { version = "4.5.1", default-features = false, features = [
    "compress-brotli",
    "macros",
    "rustls-0_22",
] }
actix-web-actors = "4.3.0"
anyhow = { workspace = true }
bincode = { workspace = true }
bytestring = "1.3.1"
clap = { workspace = true }
getset = { workspace = true }
pudlib = { path = "../pudlib" }
ruarango = "0.1.2"
rustls = "0.22.3"
rustls-pemfile = "2.1.2"
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-human-readable"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
lazy_static = { workspace = true }
