[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/puds"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "puds"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.88.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = ["pudlib/unstable"]

[dependencies]
actix = { workspace = true }
actix-http = { workspace = true }
actix-web = { version = "4.11.0", features = ["rustls-0_23"] }
actix-web-actors = "4.3.0"
anyhow = { workspace = true }
bincode = { workspace = true }
bytestring = "1.4.0"
clap = { workspace = true }
getset = { workspace = true }
pudlib = { path = "../pudlib" }
ruarango = "0.1.2"
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["serde", "serde-human-readable"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
actix-rt = { workspace = true }
