[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/puds"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudw"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"

[dependencies]
actix = "0.13.0"
actix-codec = "0.5.0"
actix-http = "3.3.1"
anyhow = "1.0.71"
awc = { version = "3.1.1", default-features = false, features = [
    "compress-brotli",
    "rustls",
] }
bincode = "1.3.3"
bytes = "1.4.0"
clap = { version = "4.2.7", features = ["derive"] }
futures = "0.3.28"
getset = "0.1.2"
pudlib = { path = "../pudlib" }
serde = { version = "1.0.162", features = ["derive"] }
thiserror = "1.0.40"
time = "0.3.21"
tokio = { version = "1.28.0", features = ["sync"] }
tracing = { version = "0.1.37", features = [
    "max_level_trace",
    "release_max_level_info",
] }
typed-builder = "0.14.0"
uuid = { version = "1.3.2", features = ["v4", "serde"] }

[build-dependencies]
rustversion = "1.0.12"

[dev-dependencies]
lazy_static = "1.4.0"
