[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["web-programming::websocket", "web-programming"]
description = "Websocket based job scheduling system"
documentation = "https://docs.rs/puds"
edition = "2021"
homepage = "https://github.com/rustyhorde/pud"
keywords = ["job", "scheduling", "websocket", "actix"]
license = "MIT OR Apache-2.0"
name = "pudw"
readme = "README.md"
repository = "https://github.com/rustyhorde/pud"
resolver = "2"
version = "0.1.0"
rust-version = "1.82.0"

[package.metadata.cargo-all-features]
denylist = ["unstable"]
skip_optional_dependencies = true

[features]
default = []
unstable = ["pudlib/unstable"]

[dependencies]
actix = { workspace = true }
actix-codec = { workspace = true }
actix-http = { workspace = true }
anyhow = { workspace = true }
awc = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
getset = { workspace = true }
pudlib = { path = "../pudlib" }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
rustversion = { workspace = true }
